<resources>
    <string name="app_name">Registration App</string>
    <string name="fullname">Full Name</string>
    <string name="gender">Gender</string>
    <string name="studentid">Student ID</string>
    <string name="school">School</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="regis">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
</resources>